WIP: need to replace every yojson basic with yojson safe and int with int 64

--- a/bin/dune
+++ b/bin/dune
@@ -3,3 +3,7 @@
  (name main)
  (ocamlopt_flags "-g")
  (libraries ocamlkz_captcha_bot))
+
+(env
+ (dev
+  (flags :standard -warn-error -26-27-32-33)))
