WIP, barely got some MVP

--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,5 @@
 (library
  (name ocamlkz_captcha_bot)
  (preprocess (pps ppx_deriving.show))
- (libraries cohttp-lwt-unix batteries yojson))
+ (libraries cohttp-lwt-unix batteries yojson)
+ (ocamlopt_flags "-g"))
