WIP, fixed some bugs of the bug. I think I am ready to try it in production, so to speak

--- a/bin/dune
+++ b/bin/dune
@@ -2,6 +2,7 @@
  (public_name ocamlkz_captcha_bot)
  (name main)
  (ocamlopt_flags "-g")
+ (ocamlc_flags "-g")
  (libraries ocamlkz_captcha_bot))
 
 (env
